<resources>
    <string name="app_name">NativeAdSample</string>

    <string name="default_placement_tag">default</string>
    <string name="placement_tag_lbl">Placement Tag</string>

    <string name="initialise_label">Initialise</string>
    <string name="initialising_label">Initialising</string>


    <string name="load_label">Load</string>
    <string name="show_label">Show</string>
    <string name="clear_label">Clear</string>

    <string name="debugger_label">Debugger</string>
</resources>
